// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment has the same initial properties 1`] = `
Environment {
  "authConfig": AuthConfig {
    "claimedAt": null,
    "pathRoot": "",
    "singleSessionMode": true,
  },
  "displayConfig": DisplayConfig {
    "afterCreateOrganizationUrl": "",
    "afterJoinWaitlistUrl": "",
    "afterLeaveOrganizationUrl": "",
    "afterSignInUrl": "",
    "afterSignOutAllUrl": "",
    "afterSignOutOneUrl": "",
    "afterSignUpUrl": "",
    "afterSwitchSessionUrl": "",
    "applicationName": "",
    "branded": true,
    "captchaHeartbeat": false,
    "captchaHeartbeatIntervalMs": undefined,
    "captchaOauthBypass": [],
    "captchaProvider": null,
    "captchaPublicKey": null,
    "captchaPublicKeyInvisible": null,
    "captchaWidgetType": null,
    "clerkJSVersion": "5",
    "createOrganizationUrl": "",
    "faviconImageUrl": "",
    "googleOneTapClientId": null,
    "homeUrl": "",
    "id": "display_config_DUMMY_ID",
    "instanceEnvironmentType": "development",
    "logoImageUrl": "",
    "organizationProfileUrl": "",
    "pathRoot": "",
    "preferredSignInStrategy": "password",
    "privacyPolicyUrl": null,
    "showDevModeWarning": true,
    "signInUrl": "",
    "signUpUrl": "",
    "supportEmail": "",
    "termsUrl": null,
    "theme": {
      "accounts": {
        "background_color": "#ffffff",
      },
      "buttons": {
        "font_color": "#ffffff",
        "font_family": "sans-serif",
        "font_weight": "600",
      },
      "general": {
        "background_color": "#ffffff",
        "border_radius": "0.5em",
        "box_shadow": "0 2px 8px rgba(0, 0, 0, 0.2)",
        "color": "#6c47ff",
        "font_color": "#151515",
        "font_family": "sans-serif",
        "label_font_weight": "600",
        "padding": "1em",
      },
    },
    "userProfileUrl": "",
    "waitlistUrl": "",
  },
  "isDevelopmentOrStaging": [Function],
  "isProduction": [Function],
  "isSingleSession": [Function],
  "maintenanceMode": false,
  "onWindowLocationHost": [Function],
  "organizationSettings": OrganizationSettings {
    "actions": {
      "adminDelete": true,
    },
    "domains": {
      "defaultRole": null,
      "enabled": false,
      "enrollmentModes": [],
    },
    "enabled": false,
    "maxAllowedMemberships": 5,
    "pathRoot": "",
  },
  "pathRoot": "/environment",
  "userSettings": UserSettings {
    "actions": {
      "create_organization": true,
      "create_organizations_limit": null,
      "delete_self": true,
    },
    "attributes": {
      "authenticator_app": {
        "enabled": false,
        "first_factors": [],
        "name": "authenticator_app",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "backup_code": {
        "enabled": false,
        "first_factors": [],
        "name": "backup_code",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "email_address": {
        "enabled": true,
        "first_factors": [
          "email_code",
        ],
        "name": "email_address",
        "required": true,
        "second_factors": [],
        "used_for_first_factor": true,
        "used_for_second_factor": false,
        "verifications": [
          "email_code",
        ],
        "verify_at_sign_up": true,
      },
      "first_name": {
        "enabled": false,
        "first_factors": [],
        "name": "first_name",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "last_name": {
        "enabled": false,
        "first_factors": [],
        "name": "last_name",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "passkey": {
        "enabled": false,
        "first_factors": [],
        "name": "passkey",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "password": {
        "enabled": true,
        "first_factors": [],
        "name": "password",
        "required": true,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "phone_number": {
        "enabled": false,
        "first_factors": [],
        "name": "phone_number",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "ticket": {
        "enabled": true,
        "first_factors": [],
        "name": "ticket",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "username": {
        "enabled": false,
        "first_factors": [],
        "name": "username",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "web3_wallet": {
        "enabled": false,
        "first_factors": [],
        "name": "web3_wallet",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
    },
    "authenticatableSocialStrategies": [
      "oauth_google",
    ],
    "enabledFirstFactorIdentifiers": [
      "email_address",
    ],
    "enterpriseSSO": undefined,
    "id": undefined,
    "passkeySettings": {
      "allow_autofill": true,
      "show_sign_in_button": true,
    },
    "passwordSettings": {
      "allowed_special_characters": "!"#$%&'()*+,-./:;<=>?@[]^_\`{|}~",
      "disable_hibp": false,
      "enforce_hibp_on_sign_in": true,
      "max_length": 72,
      "min_length": 8,
      "min_zxcvbn_strength": 0,
      "require_lowercase": false,
      "require_numbers": false,
      "require_special_char": false,
      "require_uppercase": false,
      "show_zxcvbn": false,
    },
    "pathRoot": "",
    "saml": {
      "enabled": false,
    },
    "signIn": {
      "second_factor": {
        "required": false,
      },
    },
    "signUp": {
      "captcha_enabled": false,
      "captcha_widget_type": "smart",
      "custom_action_required": false,
      "legal_consent_enabled": false,
      "mode": "public",
      "progressive": true,
    },
    "social": {
      "oauth_google": {
        "authenticatable": true,
        "block_email_subaddresses": true,
        "deprecated": false,
        "enabled": true,
        "logo_url": "https://img.clerk.com/static/google.png",
        "name": "Google",
        "not_selectable": false,
        "required": false,
        "strategy": "oauth_google",
      },
    },
    "socialProviderStrategies": [
      "oauth_google",
    ],
    "usernameSettings": {
      "max_length": NaN,
      "min_length": NaN,
    },
    "web3FirstFactors": [],
  },
}
`;

exports[`Environment __internal_toSnapshot() 1`] = `
{
  "auth_config": {
    "claimed_at": null,
    "id": "",
    "object": "auth_config",
    "single_session_mode": true,
  },
  "display_config": {
    "after_create_organization_url": "",
    "after_join_waitlist_url": "",
    "after_leave_organization_url": "",
    "after_sign_in_url": "",
    "after_sign_out_all_url": "",
    "after_sign_out_one_url": "",
    "after_sign_up_url": "",
    "after_switch_session_url": "",
    "application_name": "",
    "branded": true,
    "captcha_heartbeat": false,
    "captcha_heartbeat_interval_ms": undefined,
    "captcha_oauth_bypass": [],
    "captcha_provider": null,
    "captcha_public_key": null,
    "captcha_public_key_invisible": null,
    "captcha_widget_type": null,
    "clerk_js_version": "5",
    "create_organization_url": "",
    "favicon_image_url": "",
    "google_one_tap_client_id": null,
    "home_url": "",
    "id": "display_config_DUMMY_ID",
    "instance_environment_type": "development",
    "logo_image_url": "",
    "object": "display_config",
    "organization_profile_url": "",
    "preferred_sign_in_strategy": "password",
    "privacy_policy_url": null,
    "show_devmode_warning": true,
    "sign_in_url": "",
    "sign_up_url": "",
    "support_email": "",
    "terms_url": null,
    "theme": {
      "accounts": {
        "background_color": "#ffffff",
      },
      "buttons": {
        "font_color": "#ffffff",
        "font_family": "sans-serif",
        "font_weight": "600",
      },
      "general": {
        "background_color": "#ffffff",
        "border_radius": "0.5em",
        "box_shadow": "0 2px 8px rgba(0, 0, 0, 0.2)",
        "color": "#6c47ff",
        "font_color": "#151515",
        "font_family": "sans-serif",
        "label_font_weight": "600",
        "padding": "1em",
      },
    },
    "user_profile_url": "",
    "waitlist_url": "",
  },
  "id": "",
  "maintenance_mode": false,
  "object": "environment",
  "organization_settings": {
    "actions": {
      "admin_delete": true,
    },
    "domains": {
      "default_role": null,
      "enabled": false,
      "enrollment_modes": [],
    },
    "enabled": false,
    "max_allowed_memberships": 5,
  },
  "user_settings": {
    "actions": {
      "create_organization": true,
      "create_organizations_limit": null,
      "delete_self": true,
    },
    "attributes": {
      "authenticator_app": {
        "enabled": false,
        "first_factors": [],
        "name": "authenticator_app",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "backup_code": {
        "enabled": false,
        "first_factors": [],
        "name": "backup_code",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "email_address": {
        "enabled": true,
        "first_factors": [
          "email_code",
        ],
        "name": "email_address",
        "required": true,
        "second_factors": [],
        "used_for_first_factor": true,
        "used_for_second_factor": false,
        "verifications": [
          "email_code",
        ],
        "verify_at_sign_up": true,
      },
      "first_name": {
        "enabled": false,
        "first_factors": [],
        "name": "first_name",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "last_name": {
        "enabled": false,
        "first_factors": [],
        "name": "last_name",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "passkey": {
        "enabled": false,
        "first_factors": [],
        "name": "passkey",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "password": {
        "enabled": true,
        "first_factors": [],
        "name": "password",
        "required": true,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "phone_number": {
        "enabled": false,
        "first_factors": [],
        "name": "phone_number",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "ticket": {
        "enabled": true,
        "first_factors": [],
        "name": "ticket",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "username": {
        "enabled": false,
        "first_factors": [],
        "name": "username",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
      "web3_wallet": {
        "enabled": false,
        "first_factors": [],
        "name": "web3_wallet",
        "required": false,
        "second_factors": [],
        "used_for_first_factor": false,
        "used_for_second_factor": false,
        "verifications": [],
        "verify_at_sign_up": false,
      },
    },
    "passkey_settings": {
      "allow_autofill": true,
      "show_sign_in_button": true,
    },
    "password_settings": {
      "allowed_special_characters": "!"#$%&'()*+,-./:;<=>?@[]^_\`{|}~",
      "disable_hibp": false,
      "enforce_hibp_on_sign_in": true,
      "max_length": 72,
      "min_length": 8,
      "min_zxcvbn_strength": 0,
      "require_lowercase": false,
      "require_numbers": false,
      "require_special_char": false,
      "require_uppercase": false,
      "show_zxcvbn": false,
    },
    "saml": {
      "enabled": false,
    },
    "sign_in": {
      "second_factor": {
        "required": false,
      },
    },
    "sign_up": {
      "captcha_enabled": false,
      "captcha_widget_type": "smart",
      "custom_action_required": false,
      "legal_consent_enabled": false,
      "mode": "public",
      "progressive": true,
    },
    "social": {
      "oauth_google": {
        "authenticatable": true,
        "block_email_subaddresses": true,
        "deprecated": false,
        "enabled": true,
        "logo_url": "https://img.clerk.com/static/google.png",
        "name": "Google",
        "not_selectable": false,
        "required": false,
        "strategy": "oauth_google",
      },
    },
  },
}
`;
